--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -211,9 +211,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, F, exec, $fileManager
+bind = $mainMod&Shift, F, togglefloating,
+bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, N, exec, $notes
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -259,6 +260,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind = , mouse:276, workspace, e+1
+bind = , mouse:275, workspace, e-1
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -273,6 +277,18 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Clipboard
+bind = SUPER, V, exec, cliphist list | tofi -c ~/.config/tofi/configV | cliphist decode | wl-copy
+
+# Screen locking
+bind = SUPER, L, exec, hyprlock
+
+# Wlogout
+bind = SUPER, ESCAPE, exec, wlogout
+
+# Waybar
+bind = Ctrl, Escape, exec, killall waybar || waybar
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -282,12 +298,28 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+windowrule = float, ^(jome)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
+windowrulev2 = opacity 0.90 0.90,class:^(obsidian)$
+windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
+windowrulev2 = opacity 0.70 0.70,class:^(Spotify)$
+
+windowrulev2 = float,class:^(kvantummanager)$
+windowrulev2 = float,class:^(qt5ct)$
+windowrulev2 = float,class:^(qt6ct)$
+windowrulev2 = float,class:^(nwg-look)$
+windowrulev2 = float,class:^(pavucontrol)$
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,class:^(nm-applet)$
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+layerrule = ignorezero, dunst
