--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
+exec-once = hyprpaper
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -97,8 +98,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(8aadf4) rgb(24273A) rgb(24273A) rgb(8aadf4) 45deg
+    col.inactive_border = rgb(24273A) rgb(24273A) rgb(24273A) rgb(27273A) 45deg
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -315,6 +316,12 @@ windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+windowrulev2 = float,class:^(firefox)$,title:^()$,initialTitle:^()$
+windowrulev2 = move 100%-350 2%,class:^(firefox)$,title:^()$,initialTitle:^()$
+windowrulev2 = size 350 100,class:^(firefox)$,title:^()$,initialTitle:^()$
+# windowrulev2 = keepaspectratio,class:^(firefox)$,title:^()$,initialTitle:^()$
+windowrulev2 = pin,class:^(firefox)$,title:^()$,initialTitle:^()$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
