--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,4 @@
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/colors/rose-pine.conf
 
 
 ################
@@ -93,13 +91,13 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(8aadf4) rgb(24273A) rgb(24273A) rgb(8aadf4) 45deg
-    col.inactive_border = rgb(24273A) rgb(24273A) rgb(24273A) rgb(27273A) 45deg
+    col.active_border = $rose $pine $love $iris 90deg
+    col.inactive_border = $muted
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
